Various visual improvements for Auth and SystemStatus pages: - wrap things correctly for mobile - set max-width to avoid the layout stretching too much for big monitors - use the read-only code editor to make JSON configs look better

--- a/public/apps/configuration-react/less/main.less
+++ b/public/apps/configuration-react/less/main.less
@@ -34,4 +34,8 @@
   .sgFixedFormItem {
     max-width: 400px;
   }
+
+  .sgFixedFormGroupItem {
+    max-width: 800px;
+  }
 }
